--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 Flask>=1.1.1
 Click>=7.0
-gunicorn>=19.9.0
 itsdangerous>=1.1.0
 MarkupSafe>=1.1.1
 Werkzeug>=0.15.6
@@ -9,8 +8,10 @@ pymongo>=3.11.2
 dnspython>=2.0.0
 flask_cors>=3.0.10
 
-
 Flask-SocketIO>=5.1.0
 python-socketio>=5.0.2
 python-engineio>=4.1.0
 bidict>=0.21.0
+
+gunicorn>=19.9.0
+eventlet>=0.24.1
