--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ itsdangerous>=1.1.0
 MarkupSafe>=1.1.1
 Werkzeug>=0.15.6
 Jinja2>=2.10.1
-pymongo>=3.11.2
+pymongo[srv]>=3.11.2
 dnspython>=2.0.0
 flask_cors>=3.0.10
 
