--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ Werkzeug>=0.15.6
 Jinja2>=2.10.1
 flask_cors>=3.0.10
 
+Flask-SocketIO==5.1.0
+
 pymongo==3.11.2
 dnspython==2.1.0
 
 gunicorn==19.9.0
-gevent
+gevent==21.1.2
