--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,9 @@ dnspython==2.1.0
 
 gunicorn==19.9.0
 gevent==21.1.2
+gevent-websocket==0.10.1
 
 bcrypt==3.2.0
 six>=1.4.1
 cffi>=1.1
-pycparser
+pycparser==2.20
