--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-
 # Flask and dependencies.
 Flask>=1.1.1
 Click>=7.0
@@ -27,7 +26,19 @@ pycparser==2.20
 
 # SCSS files are compiled using pyScss.
 pyScss>=1.3.7
-six>=1.15.0
+six<2,>=1.15.0
 
 # The MScript parser uses parsimonious.
 parsimonious>=0.8.1
+
+# GQL > REST
+graphene>=2.1.8
+graphql-core<3,>=2.1
+aniso8601<=7,>=3
+graphql-relay<3,>=2
+promise<3,>=2.3
+rx<2,>=1.6
+
+# Integrating graphene with flask
+flask_graphql>=2.0.1
+graphql-server-core<2,>=1.1
