--- a/requirements.txt
+++ b/requirements.txt
@@ -28,8 +28,13 @@ pycparser==2.20
 pyScss>=1.3.7
 six<2,>=1.15.0
 
-# The MScript parser uses parsimonious.
+# The MScript parser uses parsimonious, and requests.get to fetch it.
 parsimonious>=0.8.1
+requests>=2.24.0
+certifi>=2017.4.17
+chardet<4,>=3.0.1
+urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1
+idna<3,>=2.5
 
 # GQL > REST
 graphene>=2.1.8
